objects/smagicinteract__smsMagic__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <description>SMSMagic object in Interact, This is basic Object which stores information about Outgoing SMS.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>smagicinteract__Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Admin_Email__c</fullName>
        <label>Advisor Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advisor_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisor Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor_Admin_user_id__c</fullName>
        <label>Advisor Admin user id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Email__c</fullName>
        <label>Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>smagicinteract__Contact__r.FirstName +&quot; &quot;+ smagicinteract__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Placeholder__c</fullName>
        <label>Email Placeholder</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>smagicinteract__Lead__r.FirstName +&quot; &quot;+ smagicinteract__Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Dataload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Dataload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>smsmagics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Conversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversation</label>
        <referenceTo>smagicinteract__Conversation__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Action</label>
        <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Task</label>
        <referenceTo>smagicinteract__Converse_App_Task__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App</label>
        <referenceTo>smagicinteract__Converse_App__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CreatedOn__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Delivery_Error_Message__c</fullName>
        <label>Delivery Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Direction__c</fullName>
        <description>This field determines whether its outgoing or inbound message. value 1 means outgoing, 0 means inbound.</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OUT</fullName>
                    <default>true</default>
                    <label>OUT</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Is_Text_Unicode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Unicode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to track sms&apos;s sent to Leads.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Subject__c</fullName>
        <label>MMS Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                    <default>true</default>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Name__c</fullName>
        <description>Name of the sms receiver</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectType__c</fullName>
        <description>Object type of receiver contact/lead/user</description>
        <label>ObjectType</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__PhoneNumber__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Previous_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Message</label>
        <referenceTo>smagicinteract__smsMagic__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSText__c</fullName>
        <label>SMSText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Credits__c</fullName>
        <label>Message Credits</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderId__c</fullName>
        <label>SenderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_On__c</fullName>
        <label>Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Source__c</fullName>
        <defaultValue>&quot;1150&quot;</defaultValue>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DELIVERED</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>QUEUED</fullName>
                </value>
                <value>
                    <fullName>SUBMITTED</fullName>
                    <default>true</default>
                    <label>SUBMITTED</label>
                </value>
                <value>
                    <fullName>UNDELIVERED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Type__c</fullName>
        <defaultValue>&quot;Outgoing&quot;</defaultValue>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Unformatted_Phone_Number__c</fullName>
        <label>Unformatted Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Use_Default_Sender__c</fullName>
        <label>Use Default Sender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for Tasks created for User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__deliveryStatus__c</fullName>
        <label>Delivery Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__disableSMSOnTrigger__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disable SMS On Trigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <defaultValue>null</defaultValue>
        <externalId>true</externalId>
        <label>External Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__sentStatus__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Sent Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__statusMessage__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SMS History</label>
    <listViews>
        <fullName>Events_Text_Messages</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__Direction__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__Name__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__statusMessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__SenderId__c</field>
            <operation>contains</operation>
            <value>17028204820</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/8/2020 12:00 AM</value>
        </filters>
        <label>Events Text Messages</label>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__Status__c</columns>
        <columns>smagicinteract__Direction__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__ObjectType__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__Name__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>smagicinteract__RequiredFieldMissing</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK(smagicinteract__PhoneNumber__c), 
 AND( ISBLANK( smagicinteract__SenderId__c),
       NOT(OR(ISPICKVAL(smagicinteract__Use_Default_Sender__c,&apos;Record Owner&apos;),
          ISPICKVAL(smagicinteract__Use_Default_Sender__c,&apos;Current User&apos;)
         ))
   ),
 AND( ISPICKVAL(smagicinteract__Message_Type__c,&apos;SMS&apos;),
   ISBLANK( smagicinteract__SMSText__c ),
   ISBLANK(smagicinteract__SMS_Template__c)  
   )
)</errorConditionFormula>
        <errorMessage>SenderId, Mobile Number and SMS Text are mandatory to send Message</errorMessage>
    </validationRules>
</CustomObject>